syntax = "proto3";

package api.mapService;

option go_package = "map/api/mapService;mapService";
option java_multiple_files = true;
option java_package = "api.mapService";

service Map {
	rpc GetDriveInfo (GetDriveInfoRequest) returns (GetDriveInfoReply);
}

message GetDriveInfoRequest {
	string origin = 1;
	string destination = 2;
}

message GetDriveInfoReply {
	string origin = 1;
	string destination = 2;
	string distance = 3;
	string duration = 4;
}

